--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
     "theme_color": "#000000",
     "icons": [
         {
-            "src": "icon.png",
+            "src": "Screenshot_20240809_154657_Amrit Brikshya Andolan.jpg",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/jpg"
         }
     ]
 }
